[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "imghost"
version = "0.1.0"
description = "V1 of a self-hosted image host prototype"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30,<1",
  "cairosvg>=2.7,<3",
  "fastapi>=0.115,<1",
  "pillow>=11,<12",
  "python-multipart>=0.0.9,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
